Bug 323952 - KsCD crashes when I try to play a CD
Summary: KsCD crashes when I try to play a CD
Status: RESOLVED FIXED
Alias: None
Product: kscd
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.5
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Multimedia Bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2013-08-24 03:14 UTC by Jeff Trull
Modified: 2013-09-30 14:40 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jeff Trull 2013-08-24 03:14:41 UTC
Application: kscd (1.5)
KDE Platform Version: 4.10.5
Qt Version: 4.8.4
Operating System: Linux 3.8.0-29-generic x86_64
Distribution: Ubuntu 13.04

-- Information about the crash:
attempting to play a CD.  Title of CD is displayed, but it does not play (just sort of sits there, showing no progress on the track).  I have pressed the play button, if that's not obvious.  Eventually it crashed - I may have hit play a couple of more times, or tried a different CD, I can't recall.  Hopefully the stack trace will provide some insight.

-- Backtrace:
Application: KsCD (kscd), signal: Aborted
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7feb4793a7c0 (LWP 9075))]

Thread 3 (Thread 0x7feb32d9a700 (LWP 9076)):
#0  0x00007feb4437a090 in pthread_mutex_lock (mutex=0x7feb2c000a60) at forward.c:192
#1  0x00007feb4192a5c1 in g_mutex_lock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007feb418ea7d5 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007feb418eb0fe in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007feb418eb304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007feb44fff036 in QEventDispatcherGlib::processEvents (this=0x7feb2c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#6  0x00007feb44fcf38f in QEventLoop::processEvents (this=this@entry=0x7feb32d99d90, flags=...) at kernel/qeventloop.cpp:149
#7  0x00007feb44fcf618 in QEventLoop::exec (this=this@entry=0x7feb32d99d90, flags=...) at kernel/qeventloop.cpp:204
#8  0x00007feb44ed1410 in QThread::exec (this=this@entry=0x20c4650) at thread/qthread.cpp:542
#9  0x00007feb44fb0edf in QInotifyFileSystemWatcherEngine::run (this=0x20c4650) at io/qfilesystemwatcher_inotify.cpp:256
#10 0x00007feb44ed3bec in QThreadPrivate::start (arg=0x20c4650) at thread/qthread_unix.cpp:338
#11 0x00007feb4405cf8e in start_thread (arg=0x7feb32d9a700) at pthread_create.c:311
#12 0x00007feb4436be1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 2 (Thread 0x7feb30149700 (LWP 9081)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007feb319966f9 in ?? () from /usr/lib/libvlccore.so.5
#2  0x00007feb4405cf8e in start_thread (arg=0x7feb30149700) at pthread_create.c:311
#3  0x00007feb4436be1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 1 (Thread 0x7feb4793a7c0 (LWP 9075)):
[KCrash Handler]
#6  0x00007feb442a9037 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
#7  0x00007feb442ac698 in __GI_abort () at abort.c:90
#8  0x00007feb44ec95c2 in qt_message_output (msgType=msgType@entry=QtFatalMsg, buf=0x24761d8 "ASSERT: \"!m_sinks.contains(node)\" in file ../../src/mediaobject.cpp, line 746") at global/qglobal.cpp:2347
#9  0x00007feb44ec9938 in qt_message(QtMsgType, const char *, typedef __va_list_tag __va_list_tag *) (msgType=msgType@entry=QtFatalMsg, msg=msg@entry=0x7feb45033548 "ASSERT: \"%s\" in file %s, line %d", ap=ap@entry=0x7fffbd5dbf28) at global/qglobal.cpp:2393
#10 0x00007feb44ec9ac4 in qFatal (msg=msg@entry=0x7feb45033548 "ASSERT: \"%s\" in file %s, line %d") at global/qglobal.cpp:2576
#11 0x00007feb44ec9b06 in qt_assert (assertion=assertion@entry=0x7feb31c870d2 "!m_sinks.contains(node)", file=file@entry=0x7feb31c870b8 "../../src/mediaobject.cpp", line=line@entry=746) at global/qglobal.cpp:2021
#12 0x00007feb31c76536 in Phonon::VLC::MediaObject::addSink (this=this@entry=0x21862a0, node=0x2373, node@entry=0x2136720) at ../../src/mediaobject.cpp:746
#13 0x00007feb31c7c84b in Phonon::VLC::SinkNode::connectToMediaObject (this=this@entry=0x2136720, mediaObject=0x21862a0) at ../../src/sinknode.cpp:56
#14 0x00007feb31c624bd in Phonon::VLC::AudioOutput::connectToMediaObject (this=0x2136710, mediaObject=<optimized out>) at ../../src/audio/audiooutput.cpp:50
#15 0x00007feb31c67202 in Phonon::VLC::Backend::connectNodes (this=<optimized out>, source=0x21862a0, sink=0x2136710) at ../../src/backend.cpp:358
#16 0x00007feb46c06d59 in Phonon::PathPrivate::executeTransaction (this=<optimized out>, disconnections=..., connections=...) at ../../phonon/path.cpp:332
#17 0x00007feb46c07922 in Phonon::Path::reconnect (this=this@entry=0x7fffbd5dc340, source=source@entry=0x20f5d80, sink=sink@entry=0x20f5a50) at ../../phonon/path.cpp:197
#18 0x00007feb46c07a5d in Phonon::createPath (source=0x20f5d80, sink=0x20f5a50) at ../../phonon/path.cpp:436
#19 0x000000000041662a in _start ()

Possible duplicates by query: bug 321758, bug 316495, bug 313194, bug 313047, bug 311441.

Reported using DrKonqi
Comment 1 Harald Sitter 2013-09-10 09:58:07 UTC
void MediaObject::addSink(SinkNode *node)
{
    Q_ASSERT(!m_sinks.contains(node));
    m_sinks.append(node);
}

seems to me kscd tried to connect(ao, mo) even though they were previously connected and not disconnected meanwhile
Comment 2 Harald Sitter 2013-09-30 14:40:16 UTC
Git commit b3a6b47eac52bf42cbfee0a428b070b9b388f902 by Harald Sitter.
Committed on 30/09/2013 at 14:38.
Pushed by sitter into branch 'master'.

do not create paths more than once

M  +2    -1    hwcontroler.cpp

http://commits.kde.org/kscd/b3a6b47eac52bf42cbfee0a428b070b9b388f902