do not create paths more than once

BUG: 323952